# whisper-diarization

./: QUICK_START_TESTS.md  README.md  TESTING.md  TESTS_COMPLETE_SUMMARY.md  TESTS_IMPLEMENTATION.md  TEST_METHODS_REFERENCE.md  __init__.py  diarize.py  diarize_parallel.py  helpers.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh
.github/workflows/: test_run.yml  tests.yml
diarization/: __init__.py
diarization/msdd/: __init__.py
diarization/sortformer/: __init__.py  sortformer.py
diarizer.egg-info/: PKG-INFO
src/diarizer/: __init__.py  diarize.py  diarize_parallel.py
src/diarizer/msdd/: __init__.py  msdd.py
src/diarizer/sortformer/: __init__.py
tests/: README.md  TEST_SUMMARY.txt  conftest.py  test_diarize.py  test_edge_cases.py  test_helpers.py
tests/test_output/test_diarization_parallel_output.txt/: test.srt  test.txt
