[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diarizer"
version = "1.0.0"
description = "Automatic Speech Recognition with Speaker Diarization based on OpenAI Whisper"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "nemo_toolkit[asr]>=2.5.0",
    "nltk",
    "faster-whisper>=1.1.0",
    "demucs @ git+https://github.com/MahmoudAshraf97/demucs.git",
    "deepmultilingualpunctuation @ git+https://github.com/oliverguhr/deepmultilingualpunctuation.git",
    "ctc_forced_aligner @ git+https://github.com/MahmoudAshraf97/ctc-forced-aligner.git"
]

[tool.setuptools]
package-dir = {"diarizer" = "."}
packages = ["diarizer", "diarization", "diarization.msdd", "diarization.sortformer"]

[tool.setuptools.package-data]
diarization = ["*.yaml"]

[tool.ruff]
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E731"]

[tool.ruff.lint.isort]
lines-between-types = 1
