[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diarizer"
version = "1.0.0"
description = "Automatic Speech Recognition with Speaker Diarization based on OpenAI Whisper"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "torch>=2.0.0",
    "nemo_toolkit[asr]>=2.5.0",
    "nltk",
    "faster-whisper>=1.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.ruff]
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E731"]

[tool.ruff.lint.isort]
lines-between-types = 1
